# [[file:~/Workspace/Programming/gosh-rs/runner/runners.note::*cargo][cargo:1]]
[package]
name = "gosh-runner"
version = "0.0.5"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
chrono = "0.4"
duct = "0.13"
tempfile = "3.0"
nix = "0.15"
psutil = "3"
tokio = { version="0.2", features=["full"]}
# procspawn = "0.8"
# futures = "0.1"
# bytes = "0.4"
# tokio-signal = "0.2"
# tokio-pro0cess = "0.2"
# signal-hook = {version = "0.1", features = ["tokio-support"] }
# crossbeam-channel = "0.3"
#heim = "0.0.8"
# warp = "0.1"
# reqwest = "0.9"
# linefeed = "0.6"
# libc = "0.2"
# slab = "0.4"
# nails = {path = "../nails/nails" }
# rain_task = "0.4"
# rocket = "0.4"
# mpi = { git = "https://github.com/bsteinb/rsmpi", rev = "f9aec8b8d82" }
# mpi = "0.5"
gosh-core = { version = ">=0.0.2" }

[dev-dependencies]
# cargo:1 ends here
